--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ div#container{
 	
 p{
 	width:720px;
-	margin:0px auto;
+	margin:1em auto;
 	text-align:center;
 	font-family: 'Special Elite', cursive;
 }
@@ -43,6 +43,7 @@ p{
 	margin:8px auto;
 	text-align:center;
 	background:rgba(255,255,255,0.25);
+	width:900px;
 }
 
 .nav a{
@@ -94,58 +95,34 @@ h2{
 <div class="logo">
 	<img src="images/ko_logo.png" alt="Krystal Orion"/>
 </div>
-<!--
 <div class="nav">
-<a href="#">Home</a>
 <a href="#">Listen</a>
 <a href="#">Look</a>
 <a href="#">Touch</a>
-<a href="#">Contact</a>
-<a href="#">Support</a>
-<a href="#">FOK</a>
 </div>	
--->
 	
-<p>This black sheep son of a preacher man uses sonic artistry and pithy lyrical sharpness to express lucid experiences of brutal reality. Krystal Orion was born speaking music as his first language and has been mumbling towards a crescendo ever since. His style is honest,raw and emotive, self described as "Mild Nirvana fused with Gothic Crowded House, with a hint of Kenny Rogers and sprinkled with Ween". The only true way to understand this sentence is to experience Krystal Orion for yourself.</p>
-
-<!--
-<div class="showcase">
+<p>This black sheep son of a preacher man uses <br /> sonic artistry and pithy lyrical sharpness <br />to express  lucid experiences of brutal reality. </p>
+<p>Krystal was born speaking music as a first language <br />and has been mumbling towards a crescendo ever since.</p>
+<p>His style is honest,raw and emotive,<br />Ranging from Soulful Lulabyes to Explosive Rock<p>
+<p>The only true way to understand is to <br />experience Krystal Orion for yourself.</p>
 <br />
-<iframe style="border: 0; width: 315px; height: 315px;" src="https://bandcamp.com/EmbeddedPlayer/album=1824767657/size=large/bgcol=333333/linkcol=e32c14/minimal=true/transparent=true/" seamless><a href="https://krystalorion.bandcamp.com/album/lil-d-live-in-lock-down-krystal-orion">Lil D - (Live In Lock Down) - Krystal Orion by Krystal Orion</a></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sGcVhr1oqNQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<hr />
--->
-
 <div class="showcase">
-<h2>Originals</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2P58cI-60TwEr0ifGV78o9P" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h2>Covers</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2PyYuOvHDtDpAkxVNqJIDM6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h2>Ween By Greene</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2OpqnZr_qjNh4d-nup9m850" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="border: 0; width: 320px; height: 320px;" src="https://bandcamp.com/EmbeddedPlayer/album=2627214700/size=large/bgcol=333333/linkcol=0f91ff/artwork=small/transparent=true/" seamless><a href="https://krystalorion.bandcamp.com/album/krystal-orion-debut">Krystal Orion Debut by Krystal Orion</a></iframe>
+<iframe style="border: 0; width: 320px; height: 320px;" src="https://bandcamp.com/EmbeddedPlayer/album=1824767657/size=large/bgcol=333333/linkcol=0f91ff/artwork=small/transparent=true/" seamless><a href="https://krystalorion.bandcamp.com/album/lil-d-live-in-lock-down-krystal-orion">Lil D - (Live In Lock Down) - Krystal Orion by Krystal Orion</a></iframe>
+<iframe width="320" height="320" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/890803192&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/krystalorion" title="Krystal Orion" target="_blank" style="color: #cccccc; text-decoration: none;">Krystal Orion</a> · <a href="https://soundcloud.com/krystalorion/sets/demos" title="Twilight Zone - Demos, Ideas and Unfinished Business" target="_blank" style="color: #cccccc; text-decoration: none;">Twilight Zone - Demos, Ideas and Unfinished Business</a></div>
+<iframe width="320" height="320" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2P58cI-60TwEr0ifGV78o9P" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="320" height="320" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2PyYuOvHDtDpAkxVNqJIDM6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="320" height="320" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2OpqnZr_qjNh4d-nup9m850" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 </div>
-<hr />
 
-<div class="showcase">
-<h2>Soundcloud</h2>
-<hr />
-<iframe class="sc" width="560" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/940584625&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-<iframe class="sc" width="560" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/890803192&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-</div>
-<hr />
+<div class="showcase" style="width:320px;height:320px; background:rgba(200,200,200,0.4);">
+	<div style="display:inline-block;">&nbsp;<a href="https://paypal.me/paychrisgreene" target="_"><img style="height:320px;" src="images/tipjar.webp" /></a></div>
 
-<div class="showcase" style="margin-top:80px;background:rgba(200,200,200,0.4);width:40%;">
-	<div style="width:500px;height:255px;display:inline-block;">&nbsp;<a href="https://paypal.me/paychrisgreene" target="_"><img src="images/tipjar.webp" /></a></div>
-<!--
-	<div style="width:500px;height:255px;display:inline-block;">&nbsp;
-		<a href="https://www.facebook.com/krystalstarbelt" target="_blank">F</a>
-		<a href="#">Y</a>
-		<a href="#">S</a>
-		<a href="#">E</a>
-	</div>
--->
+<br /><br /><br /><br /><br /><br /><br />
+&nbsp;
+
 </div> 
 
 
