--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@ h2{
 <a href="#">Look</a>
 <a href="#">Touch</a>
 </div>	
-	
-<p>This black sheep son of a preacher man uses <br /> sonic artistry and pithy lyrical sharpness <br />to express  lucid experiences of brutal reality. </p>
-<p>Krystal was born speaking music as a first language <br />and has been mumbling towards a crescendo ever since.</p>
-<p>His style is honest,raw and emotive,<br />Ranging from Soulful Lulabyes to Explosive Rock<p>
-<p>The only true way to understand is to <br />experience Krystal Orion for yourself.</p>
+
+<p>This black sheep uses sonic artistry and pithy lyrics <br > to express lucid experiences of brutal reality.</p>
+<p>Born speaking music as a first language KO has been <br> mumbling towards a crescendo ever since.</p>
+<p>Honest. Raw. Emotive. <br>Experience Krystal Orion for yourself.</p>
 <br />
 <div class="showcase">
 <iframe style="border: 0; width: 320px; height: 320px;" src="https://bandcamp.com/EmbeddedPlayer/album=2627214700/size=large/bgcol=333333/linkcol=0f91ff/artwork=small/transparent=true/" seamless><a href="https://krystalorion.bandcamp.com/album/krystal-orion-debut">Krystal Orion Debut by Krystal Orion</a></iframe>
