--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ h2{
 <br />
 <div class="showcase">
 <br>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fkrystalstarbelt%2Fvideos%2F275416027434441%2F&width=480" width="480" height="360" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+<iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fkrystalstarbelt%2Fvideos%2F481046439990450%2F&show_text=false&width=560" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 <br>
 <iframe width="320" height="320" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2P58cI-60TwEr0ifGV78o9P" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="320" height="320" src="https://www.youtube.com/embed/videoseries?list=PLsFmP2Nz4b2PyYuOvHDtDpAkxVNqJIDM6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
