--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ body{
 	
 	<div id="content">
 		<div class="main-gallery">
-			<div class="gallery-cell"><div id="blurb"><p>This black sheep uses sonic artistry and pithy lyrics to express lucid experiences of brutal reality. Born speaking music as a first language KO has been mumbling towards a crescendo ever since. Honest. Raw. Emotive. Experience Krystal Orion for yourself.</p></div></div>
+			<div class="gallery-cell"><div id="blurb"><p>This black sheep uses sonic artistry and pithy lyrics to express lucid experiences of brutal reality.</p><p>Born speaking music as a first language KO has been mumbling towards a crescendo ever since.</p><p>Honest. Raw. Emotive. Experience Krystal Orion for yourself.</p></div></div>
 			<div class="gallery-cell"><img src="images/ep_cd_cover_FRONT_sm.png" style="margin-top:50px;width:75%;max-width:500px;max-height:500px;"/></div>
 			<div class="gallery-cell"><img src="images/ep_cd_cover_BACK_sm.png" style="margin-top:50px;width:75%;max-width:500px;max-height:500px;"/></div>
 			<div class="gallery-cell"><h1>Originals</h1><iframe width="75%" src="https://www.youtube.com/embed/QRreGFolXUM?playlist=QRreGFolXUM,16P85KPKsAQ,8uluQqtSudI,o9tQH4_JCOw,d2poy0rAWEI,ngNnpHdWwjo,n9T9Vir98Uw,Q08VqSOEuIo,bzPgzp7EtbQ,sGcVhr1oqNQ,J6s8AnHYriE" style="width:95%;max-width:500px;height:320px;max-height:500px;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -220,7 +220,7 @@ var flkty = new Flickity( '.main-gallery', {
   cellAlign: 'center',
   contain: true,
   wrapAround: true,
-  autoPlay:4200,
+  autoPlay:10000,
   selectedAttraction: 0.01,
   friction: 0.15,
   pageDots: false
