--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@ table {
 */
 
 body{
-	background-color:rgba(0,0,0,1)
+	background-color:rgba(0,0,0,0.25);
+	background-image: url('images/ko_banner_s.jpg');
+	background-size:cover;
+	background-position:fixed;
+	background-repeat: repeat-y;
+	background-attachment: fixed;
+	
 }
 
 #screen{
@@ -166,7 +172,8 @@ body{
 
 #blurb p{
 	font-size:1.5em;
-	margin-top:50px;
+	margin:50px auto 0px auto;
+	width:90%;
 }
 </style>
 </head>
