--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8" />
 <title>Krystal Orion</title>
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+<link href="https://fonts.googleapis.com/css?family=Nosifer|Special+Elite&display=swap" rel="stylesheet">
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
 
@@ -174,6 +175,7 @@ body{
 	font-size:1.5em;
 	margin:50px auto 0px auto;
 	width:90%;
+	font-family: 'Special Elite', cursive;
 }
 </style>
 </head>
