--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ body{
 -->
 		<div class="scrBtn" style="background-color:rgba(0,110,220,1);background-image:url('images/fb.png');"><a href="https://www.facebook.com/krystalstarbelt" target="_blank">&nbsp</a></div>
 		<div class="scrBtn" style="background-color:rgba(220,0,55,1);background-image:url('images/yt.png');"><a href="https://www.youtube.com/channel/UChu3mwkd7N4Cs2Yao33IBWw" target="_blank">&nbsp</a></div>
-		<div class="scrBtn" style="background-color:rgba(220,0,55,1);background-image:url('images/sc.png');"><a href="https://www.youtube.com/channel/UChu3mwkd7N4Cs2Yao33IBWw" target="_blank">&nbsp</a></div>
+		<div class="scrBtn" style="background-color:rgba(220,0,55,1);background-image:url('images/sc.png');"><a href="https://soundcloud.com/krystalorion" target="_blank">&nbsp</a></div>
 		<div class="scrBtn" style="background-color:rgba(0,150,55,1);"><a href="https://www.gofundme.com/f/help-get-krystal-orion-recorded-and-released" target="_blank">GFM</a></div>
 <!--
 		<div class="scrBtn" style="background-color:rgba(0,0,0,1);"><a style="color:white;" href="mailto:krystalmind316@gmail.com" target="_blank">@E</a></div>
