--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ body{
 
 #blurb p{
 	font-size:1.5em;
+	line-height:1.6;
 	margin:50px auto 0px auto;
 	width:90%;
 	font-family: 'Special Elite', cursive;
@@ -190,13 +191,18 @@ body{
 
 
 <div id="screen">
-	<div id="header"><img src="images/ko_logo.png" style="min-width:75%;max-width:360px;"></div>
+	<div id="header"><img src="images/ko_logo.png" style="max-width:360px;"></div>
 	
 	<div id="content">
 		<div class="main-gallery">
+<!--
 			<div class="gallery-cell"><div id="blurb"><p>This black sheep uses sonic artistry and pithy lyrics to express lucid experiences of brutal reality.</p><p>Born speaking music as a first language KO has been mumbling towards a crescendo ever since.</p><p>Honest. Raw. Emotive. Experience Krystal Orion for yourself.</p></div></div>
+-->
+<div class="gallery-cell"><div id="blurb"><br /><br /><br /><br /><p>It's not when my voice is raised that you should worry, it's when I have nothing more to say</p></div></div>
+<!--
 			<div class="gallery-cell"><img src="images/ep_cd_cover_FRONT_sm.png" style="margin-top:50px;width:75%;max-width:500px;max-height:500px;"/></div>
 			<div class="gallery-cell"><img src="images/ep_cd_cover_BACK_sm.png" style="margin-top:50px;width:75%;max-width:500px;max-height:500px;"/></div>
+-->
 			<div class="gallery-cell"><h1>Originals</h1><iframe width="75%" src="https://www.youtube.com/embed/QRreGFolXUM?playlist=QRreGFolXUM,16P85KPKsAQ,8uluQqtSudI,o9tQH4_JCOw,d2poy0rAWEI,ngNnpHdWwjo,n9T9Vir98Uw,Q08VqSOEuIo,bzPgzp7EtbQ,sGcVhr1oqNQ,J6s8AnHYriE" style="width:95%;max-width:500px;height:320px;max-height:500px;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 			<div class="gallery-cell"><h1>Covers</h1><iframe width="75%" src="https://www.youtube.com/embed/x-hT5zDkRvY?playlist=x-hT5zDkRvY,v563BiDfSQ4,TjkBwJhkg6g,Q1-QhNPH1lU,Kmtxgfypk9c,pSbeVbyLaUE,XJG7m0wB5h8,c6KM9VtspKM,5y9KYIxbxS0" style="width:95%;max-width:500px;height:320px;max-height:500px;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 			<div class="gallery-cell"><h1>Ween by Greene</h1><iframe width="75%" src="https://www.youtube.com/embed/pSbeVbyLaUE?playlist=pSbeVbyLaUE,v563BiDfSQ4,5y9KYIxbxS0,yr2NjgM8feI" style="width:95%;max-width:500px;height:320px;max-height:500px;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -205,7 +211,9 @@ body{
 	</div>
 	
 	<div id="footer">
+<!--
 		<div class="scrBtn"><a href="https://krystalorion.com.au">H</a></div>
+-->
 <!--
 		<div class="scrBtn"><a href=#">Originals</a></div>
 		<div class="scrBtn"><a href=#">Covers</a></div>
@@ -214,7 +222,9 @@ body{
 		<div class="scrBtn" style="background-color:rgba(0,110,220,1);background-image:url('images/fb.png');"><a href="https://www.facebook.com/krystalstarbelt" target="_blank">&nbsp</a></div>
 		<div class="scrBtn" style="background-color:rgba(220,0,55,1);background-image:url('images/yt.png');"><a href="https://www.youtube.com/channel/UChu3mwkd7N4Cs2Yao33IBWw" target="_blank">&nbsp</a></div>
 		<div class="scrBtn" style="background-color:rgba(220,0,55,1);background-image:url('images/sc.png');"><a href="https://soundcloud.com/krystalorion" target="_blank">&nbsp</a></div>
+<!--
 		<div class="scrBtn" style="background-color:rgba(0,150,55,1);"><a href="https://www.gofundme.com/f/help-get-krystal-orion-recorded-and-released" target="_blank">GFM</a></div>
+-->
 <!--
 		<div class="scrBtn" style="background-color:rgba(0,0,0,1);"><a style="color:white;" href="mailto:krystalmind316@gmail.com" target="_blank">@E</a></div>
 -->
