--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 	width:370px;
 	margin:0px auto;
 	text-align:center;
-	background: rgba(0,255,0,1);
+	background: rgba(0,0,0,1);
 }	
 
 .countdown{
 	margin:0px auto;
 }
+	
+	body{background:rgb(0,0,0);
 	
 </style>
 </head>
