--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 	margin:0px auto;
 }
 	
-	body{background:rgb(0,0,0);
-	
+	body{ 
+		background:rgb(0,0,0);
+		margin-top:100px;
+	}
+		
+		
 </style>
 </head>
 <body>
