--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
 	}
 		
 		
+	h1{
+		font-size:2.2em;
+		color:#ffc;
+		letter-spacing:2em;
+		text-align:center;
+		margin:0px auto;
+		font-weight:bold;
+		font-family:sans;	
+		
 </style>
 </head>
 <body>
+
+
+<h1>Mahda</h1>
+
 
 <div class="countdown-wrapper">
   <div id="countdown" class="countdown"></div>
