--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 	body{ 
 		background:rgb(0,0,0);
 		margin-top:40px;
+		font-family:sans;
+	background-image: url('images/bgm.jpg');
+	background-size:cover;
+	background-position:fixed;
+	background-repeat: repeat-y;
+	background-attachment: fixed;
 	}
 		
 		
