--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	
 (function () {
  
- var whippyRoosterQuotes = Array("I Failed As A Egg!","Huh?","What Actually is a wet ferret?","VFVFVFVFVFVF...TTTT","WALKING PANTS?!?!?!");
+ var whippyRoosterQuotes = Array("I Failed As An Egg!","Huh?","What Actually is a wet ferret?","VFVFVFVFVFVF...TTTT","WALKING PANTS?!?!?!");
  var quoteSize = whippyRoosterQuotes.length;
  var quoteCount=0;
  
