--- a/index.html
+++ b/index.html
@@ -5,38 +5,50 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js"></script>
 -->
 <script src="js/jquery.min.js"></script>
-<script src="js/flipclock.min.js"></script>
+<script src="js/flipclock.js"></script>
 <link rel="stylesheet" href="flipclock.css">
 <style>
 .countdown-wrapper{
-	width:370px;
-	margin:40px auto;
-	text-align:center;
-	background: rgba(0,0,0,0);
+	width:100%;
+	height:100%;
+	background: rgba(60,0,0,0.0);
 	color:#fff;
+	position:absolute;
+	top:0;
+	left:0%;
+	transform: scale(0.75);
+    transform-origin: 25% 33% 0px;
+	
+	
 }	
 
 .countdown{
-	margin:40px auto;
+	position:relative;
+	top:33%;
+	left:60%;
+	
 }
 .flip-clock-label{display:none;}	
-	body{
+
+
+body{
 		text-align:center; 
 		background:rgba(0,0,0,1);
 		margin-top:40px;
 		font-family:sans;
-	background-image: url('images/firehands.jpg');
+	background-image: url('images/mahda-greene-moon_color.png');
 	background-size:cover;
 	background-position:fixed;
 	background-repeat: repeat-y;
 	background-attachment: fixed;
+	overflow:hidden;
 	}
 		
 		
 	h1,h2{
-		font-size:2.2em;
+		font-size:2.5em;
 		color:#fec;
-		letter-spacing:2em;
+		letter-spacing:4em;
 		text-align:center;
 		margin:0px auto;
 		font-weight:bold;
@@ -51,22 +63,56 @@
 		text-shadow:2px 0px black;
 		letter-spacing:-0.025em;
 	}
+	#whippy-container{
+		width:100%;
+		height:100%;
+		position:absolute;
+		top:0px;
+		left:0px;
+		background:rgba(100,100,100,.3);
+	}
 	
-	#whippy1{
-		filter : hue-rotate(180deg);
+	#whippy-content{
+		position:absolute;
+		bottom:0px;
+		width:100%;
+		text-align:center;
+	}
+	
+	img.whippy{
+			filter : hue-rotate(0deg);
+			display:inline-block;
+			background:rgba(128,100,100,0.0);
+			width:8.66%;
+			margin: 0px 2%;
+			
+	}
+	
+	#WRQ{
+		position:absolute;
+		top:25%;
+		left:0px;
+		width:100%;
+		width:100%;
 	}
 </style>
 </head>
 <body>
 <h1>Mahda</h1>
-<br />
 <h2 id="WRQ">"I Failed as an EGG..."</h2>
-
 <div class="countdown-wrapper">
   <div id="countdown" class="countdown"></div>
 </div>
-
-<img id="whippy1" src="images/whippyrooster2.png" width="200" />
+<div id="whippy-container">
+	<div id="whippy-content">
+<img id="whippy1" class="whippy" src="images/whippyrooster2.png" width="200" />
+<img id="whippy2" class="whippy" src="images/sov1.png" width="200" />
+<img id="whippy3" class="whippy" src="images/penguin.png" width="200" />
+<img id="whippy4" class="whippy" src="images/geoff.png" width="200" />
+<img id="whippy5" class="whippy" src="images/whippyrooster1.png" width="200" />
+<img id="whippy6" class="whippy" src="images/penguin.png" width="200" />
+</div>
+</div>
 
 <script>
 (function () {
@@ -74,13 +120,16 @@
 	 "I Failed As An Egg!",
 	 "Huh?",
 	 "PIAND",
-	 "VFVFVFVFVFVF...TTTT",
+	 "DING!...But....VVVVRRRRRRTTTTT",
 	  "BROGE BRO",
 	  "How many Geoffs?",
-	  "Coconut in what hole...??"
+	  "Coconut in what hole...??",
+	  "Upstag",
+	  "It had something to do with something"
  ];
  var quoteSize = whippyRoosterQuotes.length;
  var quoteCount=0;
+ var quoteOffset=0;
  var countdown, init_countdown, set_countdown;
  var TIMELEFT = 99 	
 
@@ -103,20 +152,29 @@
         },
         
         interval: function () {
-				
+			quoteOffset++;
+			if(quoteOffset >= 50){	
 			quoteCount++;
+			quoteOffset=0;
 			if(quoteCount >= quoteSize){quoteCount=0;}
 			document.getElementById("WRQ").innerHTML= whippyRoosterQuotes[quoteCount];
+			}
+			for(a=1;a<7;a++){
 			var randDeg = Math.random() * (360 - 0) + 0;
-			var randWhip = Math.random() * (700 - -250) + -250;
-			var randOpacity =  Math.random() * (1 - 0.1) + 0.1;
-			var randSize = Math.random() * (0.25 - 1.5) + 1.5;
-			var whippy = document.getElementById("whippy1");
+			var randWhip = Math.random() * (10 - 0) + 0;
+			var randRot = Math.random() * (10 - -10) + -10;
+			var randOpacity =  Math.random() * (1 - 0.3) + 0.3;
+			var randSize = Math.random() * (0.7 - 1.0) + 1;
+			var target = "whippy" + a;
+			var whippy = document.getElementById(""+ target);
 			whippy.style.filter = "hue-rotate("+ randDeg +"deg)";
-			whippy.style.marginLeft=randWhip;
-			whippy.style.transform="rotate("+randWhip+"deg) scale("+randSize+")";	
+			whippy.style.marginBottom=randWhip/2;
+			whippy.style.transform="rotate("+randRot+"deg) scale("+randSize+")";	
+			//whippy.style.transform="scale("+randSize+")";	
 			whippy.style.opacity = "" + randOpacity + "";
-//			whippy.style.transform="scale("+randSize+")";	
+			//~ whippy.style.transform="scale("+randSize+")";	
+			}			
+			
 			
 			var time;
 			time = this.factory.getTime().time;
@@ -158,7 +216,13 @@
 }).call(this);
 
 
-
+  //~ _setInterval: function(callback) {
+        //~ var t = this;
+        //~ t.interval = 100;// <-- add this
+        //~ t.timer = setInterval(function() {          
+            //~ t._interval(callback);
+        //~ }, this.interval);
+    //~ }
 
 
 </script>
