--- a/index.html
+++ b/index.html
@@ -5,195 +5,14 @@
 	<title>Greetings Earthlings Welcome to Mahda's Online Ocean of Numbers</title>
 	<script src="js/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/reset.css" />
-	<style>
-		body{text-align:center; background:rgba(22,22,22,255); font-family:sans; color:#ddd; padding-bottom:100px;}
-				
-
-		h1{
-			font-size:3.5em;
-			color:#eee;
-			text-align:center;
-			margin:0px auto;
-			font-weight:bold;
-			font-family:sans;	
-			-webkit-text-stroke: 2px black;
-			text-shadow: 5px 5px 3px black;
-			}
-			
-		h2{
-			font-size:2em;
-			color:#ee9911;
-			text-shadow:4px 2px black;
-			letter-spacing:-0.025em;
-			}
-			
-		h2.scream{
-			background:rgba(111,11,11,1);
-			padding:10px 0px 10px 0px;
-			font-weight:bold;
-			letter-spacing:0px;
-			width:100%;
-			
-		}
-
-
-		h3{
-				font-size:2em;
-			}
-
-
-		a{color:#fe8}	
-
-
-		table{
-			width:80%;
-			margin:0px auto;
-			border:solid 2px black;
-			background-image:linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), linear-gradient(to right, black 50%, white 50%),linear-gradient(to bottom, black 50%, white 50%);
-			background-blend-mode: normal, difference, normal;
-			background-size: 5em 5em;
-						
-		}
-
-		td{vertical-align:top;}
-		
-		footer{
-			margin:0px auto;
-			bottom:0px;
-			position:fixed;
-			background:rgba(0,0,0,255);
-			width:100%;
-			display:none;
-		}	
-
-
-		iframe{margin:10px}
-		b{
-			font-weight:bold;
-			color:#fa2;
-		}
-		#header{width:100%;margin:-10px auto 20px auto;}
-		
-		p{line-height:1.5em;}
-		.gold{color:#fa4;}
-		.green{color:#8f4;}
-		p{margin: 10px 0px; 5px 0px;}
-		p.mono{font-size:1.25em;font-family:monospace;font-weight:bold;width:100%;height:100%}
-		.scriptfont{font-family:script;}
-		.peace{color:#821;-webkit-text-stroke: 2px red;z-index: -1000}
-		.tagline{margin: -10px 0px auto 0px;font-weight:bold;z-index:1000}
-		.blackbg{background:black;}
-
-	ul{text-align:left;width:360px;margin:0px auto;}
-	
-	
-	.d2 {
-		background-image:
-		linear-gradient(
-			0deg,
-			rgba(255,128,128,0.25),
-			rgba(255,128,128,0) 75%
-		)
-		,
-		linear-gradient(
-			89deg,
-			transparent,
-			transparent 30%,
-			#510A0E 35%,
-			#510A0E 40%,
-			#61100F 43%,
-			#B93F3A 50%,
-			#4B0408 55%,
-			#6A0F18 60%,
-			#651015 65%,
-			#510A0E 70%,
-			#510A0E 75%,
-			rgba(255,128,128,0) 80%,
-			transparent
-		)
-		,
-		linear-gradient(
-			92deg,
-			#410A0E,
-			#510A0E 20%,
-			#61100F 25%,
-			#B93F3A 40%,
-			#4B0408 50%,
-			#6A0F18 70%,
-			#651015 80%,
-			#510A0E 90%,
-			#510A0E
-		);
-	background-size:
-		cover,
-		300px 100%,
-		109px 100%;
-		background-repeat: repeat-x;
-		background-attachment: fixed;
-		
-		height:100vh;
-	
-	}	
-
-.hue {
-  -webkit-animation: hue 30s infinite;
-}	
-	@-webkit-keyframes hue {
-  0%, 100%  { filter:hue-rotate(0deg); }
-  50% { filter:hue-rotate(180deg); }
-}
-
-
-#container{
-	width:80%;
-	margin:0px auto;
-}
-
-#container:before {
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-size: cover;
-  
-}
-#container_inside {
-  position: relative;
-  background:rgba(0,0,0,0.4);
-  width:100%;
-  margin:0px auto;
-  
-   
-}
-
-.floating { 
-    animation-name: floating;
-    animation-duration: 12.56s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease;
-    margin-left: 30px;
-    margin-top: 5px;
-}
- 
-@keyframes floating {
-    0% { transform: translate(0px, 0px) rotate(0deg); }
-    25%  { transform: translate(0px, 2px) rotate(1deg); }
-    50%  { transform: translate(0px, 2px) rotate(-0deg); }
-    75%  { transform: translate(0px, 2px) rotate(-1deg); }
-    100%   { transform: translate(0px, -0px); rotate(-0deg)}   
-}
-
-</style>
-
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body >
 	<div id="wrapper">
 	<div id="container" class="d2">
 		<div id="container_inside" class="">
-		<h1>Mahda.<span class="green">com</span>.<span class="gold">au</span></h1>
+		<h1>M<span style="color:#169B62;">ah</span><span style="color:#FF883E">da</span>.<span class="green">com</span>.<span class="gold">au</span></h1>
 		<div id="header" class="floating">
 			<h1 class="hue peace">Peace, Love & Light</h1>
 			<p class="normal tagline floating">and a little bit of programming . . . Probably . . . Maybe . . . Definatley . . . P'raps</p>
@@ -202,18 +21,13 @@
 		
 		<table>
 		<tr >
-			<td colspan="2" class="blackbg">
+			<td colspan="1" class="blackbg">
 				<p class="mono blackbg">Free, Open source, local community backed, Sprint Car Racing Game</p> 
 				<h2 class="scream"><a href="https://mahda.itch.io/scream">SCREAM: Sprint Car Racing Evolved Action on Mud</a></h2>
 			</td>
 		</tr>
 			
 		<tr>
-			<td>
-<!--
-			<iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;bg_color=2a1d12&amp;fg_color=beb2b2&amp;link_color=f8d54f&amp;border_color=3f3f3f" width="205"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
--->
-			</td>
 			<td>
 			<iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;bg_color=2a1d12&amp;fg_color=beb2b2&amp;link_color=f8d54f&amp;border_color=3f3f3f" width="205"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
 			<p>Includes Junior Formula 500 Champion <b><i><u>Koby O'Shannasay</u></i></b> along with <br /> <b><i><u>The Gillin Boys Foundation</u></i></b> Sprint Cars</p>
@@ -236,8 +50,15 @@
 			<p class="scriptfont">Let's Go Racing!</p>
 			</td>
 		</tr>
+		<tr>
+		<td>
+		<a href="https://www.youtube.com/@screamracing">Youtube Channel</a>
+		<a href="https://www.facebook.com/groups/screamracing">Facebook Page</a>
+		</td>
+		</tr>
 		</table>
-				<hr />
+		<br /><br /><br /><br />
+		<hr />
 		
 		<h3 class="floating">Other Areas of Interest</h3>	
 		<p class="normal">
