--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Greetings Earthlings Welcome to Mahda's Online Ocean of Numbers</title>
+	<title>Mahda's Online Ocean of Numbers</title>
 	<script src="js/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style.css" />
@@ -10,59 +10,21 @@
 
 <body >
 	<div id="wrapper">
-	<div id="container" class="d2">
-		<div id="container_inside" class="">
-		<h1>M<span style="color:#169B62;">ah</span><span style="color:#FF883E">da</span>.<span class="green">com</span>.<span class="gold">au</span></h1>
-		<div id="header" class="floating">
-			<h1 class="hue peace">Peace, Love & Light</h1>
-			<p class="normal tagline floating">and a little bit of programming . . . Probably . . . Maybe . . . Definatley . . . P'raps</p>
-		</div>
-		<br />
-		
-		<table>
-		<tr >
-			<td colspan="1" class="blackbg">
-				<p class="mono blackbg">Free, Open source, local community backed, Sprint Car Racing Game</p> 
-				<h2 class="scream"><a href="https://mahda.itch.io/scream">SCREAM: Sprint Car Racing Evolved Action on Mud</a></h2>
-			</td>
-		</tr>
-			
-		<tr>
-			<td>
-			<iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;bg_color=2a1d12&amp;fg_color=beb2b2&amp;link_color=f8d54f&amp;border_color=3f3f3f" width="205"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
-			<p>Includes Junior Formula 500 Champion <b><i><u>Koby O'Shannasay</u></i></b> along with <br /> <b><i><u>The Gillin Boys Foundation</u></i></b> Sprint Cars</p>
-			<p>The Supporters involved list now looks like this:
-				<ul>
-					<li>Dave Donnaz</li>
-					<li>Tim Van Ginneken</li>
-					<li>Koby O'Shannasay</li>
-					<li>Gillin Boys Foundation</li>
-					<li>Johnny Vogles</li>
-					<li>Alex's Pizza</li>
-				</ul>
-					</p>
-			<br/>
-			
-			</td>
-			</tr>
-			<tr><td colspan="2" class="blackbg">
-			<h2 class="scream"><a target="_blank" href="http://scr.mahda.com.au/"><span class="green">BONUS!!!</span> - Link to Early 2d prototype</a></h2>
-			<p class="scriptfont">Let's Go Racing!</p>
-			</td>
-		</tr>
-		<tr>
-		<td>
-		<a href="https://www.youtube.com/@screamracing">Youtube Channel</a>
-		<a href="https://www.facebook.com/groups/screamracing">Facebook Page</a>
-		</td>
-		</tr>
-		</table>
-		<br /><br /><br /><br />
-		<hr />
-		
-		<h3 class="floating">Other Areas of Interest</h3>	
-		<p class="normal">
-			<h2>Music</h2>
+		<div id="container" class="d2">
+			<div id="container_inside" class="">
+				<h1>MAHDA.COM.AU</h1>
+
+				<iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;dark=true" width="552" height="167"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
+				<br />
+				<a href="https://www.facebook.com/groups/screamracing">Facebook Page</a> |
+				<a href="https://www.youtube.com/@screamracing">Youtube Channel</a> |
+				
+				<a target="_blank" href="http://scr.mahda.com.au/">Link to Early 2d prototype</a>
+	
+				<br /><br />
+				<h3 class="floating">Other Areas of Interest</h3>	
+				<p class="normal">
+				<h2>Music</h2>
 				Guitar
 				Bass
 				Ukelele
@@ -91,15 +53,13 @@
 				Kinetic Typography
 				Video Editing, Compostion & Rendering
 
-<hr />
-		<h3>Contact Inforrmation</h3>	
-		<a href="mailto:mahdagreenemoon@gmail.com">E-Mail: &#9993 mahdagreenemoon@gmail.com</a>	
+				<br /><br />
+				<h3>Contact Inforrmation</h3>	
+				<a href="mailto:mahdagreenemoon@gmail.com">E-Mail: &#9993 mahdagreenemoon@gmail.com</a>	
 
 </div>
 </div>
 </div>
-<footer>Page accesed: <script>document.write(""+ Date())</script><br />
-using <script>document.write(""+window.navigator.userAgent)</script></footer>
-</script>
+<footer>Thanks</footer>
 
 </body>
