--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<a target="_blank" href="http://scr.mahda.com.au/">Link to Early 2d prototype</a>
 	
 				<br /><br />
+				<a href='https://play.google.com/store/apps/dev?id=8540520771818199657&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
 				<h3 class="floating">Other Areas of Interest</h3>	
 				<p class="normal">
 				<h2>Music</h2>
