--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<title>Mahda's Online Ocean of Numbers</title>
 	<script src="js/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/reset.css" />
